# vvault

./: LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: test.yml
src/sololc_vvault/cli/: main.py
src/sololc_vvault/core/: crypto.py  storage.py
tests/: test_crypto.py  test_import.py  test_totp.py
