[project]
name = "sololc-vvault"
version = "0.1.0"
description = "vlt - Minimalist Secure Vault (Vvault CLI)"
readme = "README.md"
license = { text = "BSD-3-Clause" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
authors = [
    { name = "Josh Klein", email = "gigacoderx@gmail.com" }
]
requires-python = ">=3.11.15"
dependencies = [
    "cryptography>=46.0.7",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pyotp>=2.9.0",
    "pyperclip>=1.11.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "qrcode>=8.2",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.urls]
Homepage = "https://github.com/nuv0x/sololc-vvault"
Repository = "https://github.com/nuv0x/sololc-vvault"
Issues = "https://github.com/nuv0x/sololc-vvault/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
vlt = "vvault:app"  # Key: Map the vlt command to your program


